force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description
  >Presupuesto de remodelación de una propiedad. Guarda el período y la proyección de ingresos calculada al momento de crearlo (Historia 5.6).</description>
    <label>Budget</label>
    <nameField>
        <displayFormat>BUD-{0000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>