force-app/main/default/objects/Budget__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description
  >Último día del período que cubre el presupuesto. Debe ser posterior a Start_Date__c (ver la Validation Rule End_After_Start).</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>