force-app/main/default/objects/Budget__c/fields/Is_Demo__c.field-meta.xml
<CustomField>
    <fullName>Is_Demo__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indica si el registro es un dato de demostración visible para el Guest User del sitio Experience Cloud. Mismo criterio que el resto de los objetos del modelo. Default: true.</description>
    <label>Is Demo</label>
    <type>Checkbox</type>
</CustomField>