force-app/main/default/objects/Budget__c/fields/Projected_Income__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income__c</fullName>
    <description
  >Ingreso proyectado para el período, congelado al momento de crear el presupuesto. Es una foto de la decisión: no se recalcula solo cuando entran reservas nuevas, para poder comparar después lo planificado contra lo que realmente pasó. Lo calcula RevenueProjectionService.</description>
    <label>Projected Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>