force-app/main/default/objects/Budget__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description
  >Propiedad a la que pertenece este presupuesto. Master-Detail por el mismo criterio que Expense__c: el presupuesto no tiene sentido sin su propiedad, y así hereda el sharing (ControlledByParent) en vez de necesitar reglas propias.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>