force-app/main/default/objects/Budget__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description
  >Primer día del período que cubre el presupuesto. La proyección de ingresos se calcula mes a mes desde este mes inclusive.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>