force-app/main/default/objects/Budget__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula
  >End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorMessage
  >La fecha de fin del presupuesto debe ser posterior a la de inicio.</errorMessage>
    <errorDisplayField>End_Date__c</errorDisplayField>
</ValidationRule>